tests/compiler/diagnostics-engine/frontend-errors/tests/stmt-incompatible-conversion/expected.txt
Error: Incompatible conversion from 'Test2' to 'Test1'
 --> Override.jack:5:17
   |
 5 |         let x = Test2.new();
   |                 ^~~~~
